forcibly set all text within justify-span to font-weight:normal to avoid unexpected truncation

--- a/public/css/justify.css
+++ b/public/css/justify.css
@@ -7,4 +7,5 @@
     text-align:center;
     display: inline-block;
     white-space: nowrap;
+    font-weight: normal !important;
 }
